--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,13 @@ dependencies:
   lottie: ^1.0.1
   image_picker: ^0.7.2+1
   bubble_bottom_bar: ^1.2.0
+  flutter_button: ^0.0.4
+  like_button: ^2.0.1
+  pinch_zoom_image_last: ^0.3.2
+  flutter_staggered_grid_view: ^0.3.3
+  transparent_image: ^1.0.0
+  cached_network_image : ^2.5.1
+  video_player : ^2.0.2
 
 
 dev_dependencies:
@@ -52,6 +59,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/back.png
+    - assets/images/shutter.png
+    - assets/images/send.png
+    - assets/images/avatar.png
+    - assets/images/commentary.png
+    - assets/images/bookmark.png
     - assets/jsons/food.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
