--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,7 +4,14 @@
 <dict>
 <key>NSPhotoLibraryUsageDescription</key>
 <string>Allow access to photo library</string>
+<key>NSLocationWhenInUseUsageDescription</key>
+   <string>This app needs access to location when open.</string>
 
+   <key>NSLocationAlwaysUsageDescription</key>
+   <string>This app needs access to location when in the background.</string>
+
+   <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+   <string>This app needs access to location when open and in the background.</string>
 <key>NSCameraUsageDescription</key>
 <string>Allow access to camera to capture photos</string>
 
