--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,12 @@ dependencies:
   toast: ^0.1.5
   flutter_image_compress: ^1.0.0
   flutter_slidable: ^0.5.7
+  smooth_page_indicator: ^0.2.3
+  page_indicator: ^0.4.1
+  multi_image_picker: ^4.8.0
+  flutter_absolute_path: ^1.0.6
+  rflutter_alert: ^2.0.2
+  pin_code_fields: ^7.1.0
 
 
 dev_dependencies:
@@ -85,6 +91,7 @@ flutter:
     - assets/jsons/food.json
     - assets/jsons/comment.json
     - assets/jsons/no_result.json
+    - assets/jsons/send_email.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
